make sure scrollbar shows up in right place by setting right/left in absolute positioned div

--- a/assets/stylesheets/blacklight_advanced_search_styles.css
+++ b/assets/stylesheets/blacklight_advanced_search_styles.css
@@ -15,6 +15,8 @@
   position: absolute;
   top: 6em;
   bottom: 0;
+  right: 0;
+  left: 0;
   overflow-y: auto;
 }
 
